--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,13 @@
   box-sizing: border-box;
 }
 
+.logo-img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 0;
+}
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
